fixed station layer popup table align ment

--- a/src/htdocs/modules/summary/0-0-1/css/_ShakeMapStationLayer.scss
+++ b/src/htdocs/modules/summary/0-0-1/css/_ShakeMapStationLayer.scss
@@ -85,5 +85,5 @@
 .station-channels-psa03,
 .station-channels-psa10,
 .station-channels-psa30 {
-	text-align:center;
+	text-align:left;
 }
